--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.1.6",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.5",
@@ -28,10 +29,10 @@
     "@radix-ui/react-tooltip": "^1.1.7",
     "@react-email/components": "^0.0.32",
     "@types/mdx": "^2.0.13",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
-    "fs": "0.0.1-security",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
@@ -42,6 +43,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "slugify": "^1.6.6",
+    "sonner": "^1.7.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
@@ -61,8 +63,6 @@
     "typescript": "^5.7.3"
   },
   "browser": {
-    "fs": false,
-    "path": false,
-    "os": false
+    "fs": false
   }
 }
