--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "framer-motion": "^12.5.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "next": "15.2.4",
     "next-mdx-remote": "4.4.1",
+    "nextjs-toploader": "^3.8.16",
     "nodemailer": "^6.10.0",
     "nuqs": "^2.3.1",
     "react": "^19.0.0",
@@ -58,7 +59,6 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.29.0",
     "eslint": "^9.19.0",
     "eslint-config-next": "15.1.6",
     "postcss": "^8.5.1",
